--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,17 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Querylet-Output-Text
-version:      0.11
-version_from: lib/Querylet/Output/Text.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                Querylet-Output-Text
+version:             0.111
+abstract:            output querylet results to text tables
+license:             ~
+generated_by:        ExtUtils::MakeMaker version 6.31
+distribution_type:   module
+requires:     
     Querylet::Output:              0.16
     Querylet::Query:               0.28
     Test::More:                    0
     Text::Table:                   1
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
+    version: 1.2
+author:
+    - Ricardo SIGNES <rjbs@cpan.org>
