Import of RJBS/Querylet-Output-Text-0.112 from CPAN.
gitpan-cpan-distribution: Querylet-Output-Text
gitpan-cpan-version:      0.112
gitpan-cpan-path:         RJBS/Querylet-Output-Text-0.112.tar.gz
gitpan-cpan-author:       RJBS
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,8 @@
 --- #YAML:1.0
 name:                Querylet-Output-Text
-version:             0.111
+version:             0.112
 abstract:            output querylet results to text tables
-license:             ~
+license:             perl
 generated_by:        ExtUtils::MakeMaker version 6.31
 distribution_type:   module
 requires:     
